# EmbeddedLciMpc.jl

./: .gitignore  CMakeLists.txt  Manifest.toml  Project.toml  README.md
scripts/: cat_walk_policy.jl  centroidalBox_test.jl  centroidalCrawl_test.jl  centroidalOneLeg_test.jl  centroidalStand.jl  centroidalStand_test.jl  centroidalTrot_test.jl  centroidalWall_test.jl  continuous_policy.jl  continuous_policy_v2.jl  cpr_policy.jl  lciControllerStand.jl  pace_forward_policy.jl  pdPolicy.jl  precompile_controller.jl  precompile_sysimage.jl  reach_policy.jl  sidesteps_policy.jl  stand_policy.jl  testCentroidalQuadruped.jl  testFullBodyQuadruped.jl  trot_policy.jl  tvlqr_stand_test.jl  utils.jl  wall_stand_policy.jl  wall_walk_policy.jl
scripts/config/: cat_walk_gazebo.yaml  cat_walk_hardware.yaml  cat_walk_step_hardware.yaml  dog_cpr_gazebo.yaml  dog_cpr_hardware.yaml  pace_forward_gazebo.yaml  pace_forward_hardware.yaml  reach_gazebo.yaml  reach_hardware.yaml  sidesteps_gazebo.yaml  sidesteps_hardware.yaml  stand_gazebo.yaml  stand_gazebo_test.yaml  stand_hardware.yaml  trot_gazebo.yaml  trot_gazebo_test.yaml  trot_hardware.yaml
scripts/config/gazebo/: pace_forward_gazebo.yaml  sidesteps_gazebo.yaml  trot_gazebo.yaml  trot_gazebo_h.yaml  wall_stand_gazebo.yaml  wall_stand_v11_gazebo.yaml  wall_walk_gazebo.yaml
scripts/config/hardware/: pace_forward_hardware.yaml  sidesteps_hardware.yaml  stand_hardware.yaml  trot_hardware.yaml  wall_stand_hardware.yaml  wall_walk_hardware.yaml
scripts/config_gazebo/: pace_forward.yaml
scripts/imitation_mocap/: hopturn_test.jl  pace_backward_test.jl  pace_forward.txt  pace_forward_test.jl  sidesteps_test.jl
scripts/runtime_data/: analyze_runtime.jl
scripts/runtime_data/stand/: Nsample10_Hmpc10.csv  Nsample10_Hmpc2.csv  Nsample10_Hmpc5.csv  Nsample5_Hmpc10.csv  Nsample5_Hmpc2.csv  Nsample5_Hmpc5.csv
src/: EmbeddedLciMpc.jl  controller.jl  lciPolicy.jl  main.cpp  pdController.jl  qpController.jl  tvlqr.jl  utils.jl
src/include/: juliaCpp.h
src/tests/: testCustomVector.cpp  testJuliaCall.cpp
